2007-01-29  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (main): For successful last_pass=4, print compiled module name.
	* cache.cxx (get_from_cache): Ditto.

2007-01-23  Mike Mason <mmlnx@us.ibm.com>

	* Makefile.am, configure.ac: Add support for
	stapprobes.socket man page.
	* configure, Makefile.in: Regenerate.
	* man/stapprobes.socket.5.in: Socket tapset man page.
	* stapprobes.5.in: Add stapprobes.socket(5) to "See Also" section.
	* stapfuncs.5.in: Add new string and sockets functions.

2007-01-23  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (loc2c_error): Correct vasprintf ignored-rc warning.

2007-01-22  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (mapvar::exists): Use new _stp_map_exists function.
	Testing for zero is no longer correct after changes from 2007-01-10
	below.

2007-01-18  Frank Ch. Eigler  <fche@elastic.org>

	* main.cxx (version): Add (C) 2007.
	* translate.cxx (emit_module_init): Add a KERN_DEBUG printk
	at module startup time to aid debugging and auditing.

2007-01-12  David Smith  <dsmith@redhat.com>

	* tapsets.cxx
	(dwarf_var_expanding_copy_visitor::visit_target_symbol): Since
	array behavior has changed (setting to 0 no longer deletes the
	array element), we delete the internal counter array element when
	providing target variable access in return probes.

2007-01-11  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in (elfutils_version): Bump to 0.125.
	Older libdw's have known bugs, though the ABI has not changed.

2007-01-10  Martin Hunt  <hunt@redhat.com>

	* translate.cxx (mapvar::del): Call the new _stp_map_del
	function instead of setting to zero.

2007-01-01  Frank Ch. Eigler  <fche@redhat.com>

	* configure.ac: Bump version to 0.5.12 for release.
	* configure: Regenerated.
	* NEWS, AUTHORS: Populate & repopulate.

2006-12-29  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (*group:emit_module_init): flush stdout less for timing
	mode.  Also, Set probe_point variable ...