@@ -1,3 +1,8 @@
+2007-01-29  Martin Hunt  <hunt@redhat.com>
+
+	* translate.cxx (emit_module_init): BZ3888. Add memory usage for the
+	runtime to the printk.
+
 2007-01-29  Frank Ch. Eigler  <fche@elastic.org>
 
 	* main.cxx (main): For successful last_pass=4, print compiled module name.
